--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>TypeScript</title>
+    <style>
+      #chart {
+        height: 400px;
+        width: 600px;
+        background: radial-gradient(black, transparent);
+      }
+    </style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div id="chart"></div>
+    </div>
   </body>
 </html>
